--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
 __pycache__/
+
+# Archivos de PyCharm
+.idea/
+
+# Entornos virtuales
+venv/
+miniconda3/
+env/
+
+# Archivos de Python
+*.pyc
+__pycache__/
+*.pyo
+*.pyd
+
+# Checkpoints de Jupyter Notebook
+*.ipynb_checkpoints/
+
+# Archivos de datos grandes
+*.csv
+*.json
+*.parquet
+
+# Archivos temporales
+*.log
+*.tmp
